add role and auth